--- a/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Properties/launchSettings.json
+++ b/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://0.0.0.0:5030"
+      "applicationUrl": "http://localhost:5030"
     },
     "Docker": {
       "commandName": "Docker",
