--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -40,9 +40,10 @@ services:
       - redis
 
   financialbgtasks:
-    image: dps1lence/insightify.financialbackgroundtasks
+    image: sk1es/insightify.financialdatabackgroundtasks:v3
     environment:
       ConnectionStrings__Redis: "redis:6379"
+      ConnectionStrings__RabbitMQ: "amqp://rabbitmq:5672"
     depends_on:
       - redis
       - rabbitmq
@@ -63,26 +64,28 @@ services:
     image: dps1lence/insightify.newsbackgroundtasks:v4
     environment:
       Mongo__Url: "mongodb://mongo:27017"
-      Rabbit__Url: "rabbitmq://rabbitmq:5672"
+      Rabbit__Url: "amqp://rabbitmq:5672"
     depends_on:
       - mongo
       - rabbitmq
 
   notifications:
-    image: dps1lence/insightify.notifications
+    image: dps1lence/insightify.notifications:v4
     environment:
       Mongo__Url: "mongodb://mongo:27017"
       ASPNETCORE_URLS: http://+:5121
+      Rabbit__Url: "amqp://rabbitmq:5672"
     ports:
       - "5121:5121"
     depends_on:
       - mongo
 
   mvc:
-    image: sk1es/insightify.mvc:v7
+    image: dps1lence/insightify.mvc:v3
     environment:
       IdentityUrl: "http://identityserver:5001"
       GatewayUrl: "http://gateway:5030"
+      SignalRHubUrl: "http://notifications:5121/notificationhub"
     ports:
       - "5008:80"
     depends_on:
@@ -90,11 +93,12 @@ services:
       - identityserver
 
   gateway:
-    image: sk1es/insightify.gateway:v4
+    image: dps1lence/insightify.webgateway
     environment:
       ServiceEndpoints__FinancialData: "http://financialapi:5037"
       ServiceEndpoints__News: "http://newsapi:5035"
       ServiceEndpoints__Posts: "http://posts:5036"
+      ServiceEndpoints__Account: "http://identityserver:5001"
       IdentityUrl: "http://identityserver:5001"
     ports:
       - "5030:5030"
@@ -119,7 +123,7 @@ services:
       - identityserver
 
   identityserver:
-    image: sk1es/insightify.identityserver:v6
+    image: dps1lence/insightify.identity:v2
     environment:
       ConnectionStrings__DefaultConnection: "Server=sqlserver,1433;Database=IdentityApi;User Id=sa; Password=SQLSxrvxr123$; TrustServerCertificate=True;"
     ports:
