--- a/.github/workflows/mvc-client.yml
+++ b/.github/workflows/mvc-client.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      working-directory: src/Web/Insightify.MVC/Insightify.MVC
+      working-directory: src/Web/Insightify.MVC
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -50,8 +50,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: src/Web/Insightify.MVC/Insightify.MVC
-          file: src/Web/Insightify.MVC/Insightify.MVC/Dockerfile
+          context: src/Web/Insightify.MVC
+          file: src/Web/Insightify.MVC/Dockerfile
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/insightify.mvc
 
