--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -1,17 +1,17 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Dockerize Insightify.Identity
+name: Dockerize Insightify.Web.Gateway
 
 on:
   push:
     branches: [ "develop" ]
     paths: 
-      - 'src/Services/Insightify.IdentityAPI/**'
+      - 'src/Gateways/Insightify.Web.Gateway/**'
   pull_request:
     branches: [ "develop" ]
     paths: 
-      - 'src/Services/Insightify.IdentityAPI/**'
+      - 'src/Gateways/Insightify.Web.Gateway/**'
 
 jobs:
   build:
@@ -25,18 +25,18 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj
+      run: dotnet restore src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj
     - name: Build
-      run: dotnet build src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj --no-restore
+      run: dotnet build src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj --no-restore
     - name: Test
-      run: dotnet test src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj --no-build --verbosity normal
+      run: dotnet test src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj --no-build --verbosity normal
       
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     env:
-      working-directory: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI
+      working-directory: src/Gateways/Insightify.Web.Gateway
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -50,8 +50,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI
-          file: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Dockerfile
+          context: src/Gateways/Insightify.Web.Gateway
+          file: src/Gateways/Insightify.Web.Gateway/Dockerfile
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/insightify.identity
 
