--- a/.github/workflows/financial-data.yml
+++ b/.github/workflows/financial-data.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Dockerize Insightify.FinancialDataAPI
+name: Dockerize Insighify.FinancialDataAPI
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "develop" ]
     paths: 
-      - 'src/Services/Insightify.FinancialDataApi/**'
+      - 'src/Services/Insighify.FinancialDataApi/**'
 
 jobs:
   build:
@@ -23,18 +23,18 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi/Insightify.FinancialDataApi.csproj
+      run: dotnet restore src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj
     - name: Build
-      run: dotnet build src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi/Insightify.FinancialDataApi.csproj --no-restore
+      run: dotnet build src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj --no-restore
     - name: Test
-      run: dotnet test src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi/Insightify.FinancialDataApi.csproj --no-build --verbosity normal
+      run: dotnet test src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj --no-build --verbosity normal
       
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     env:
-      working-directory: src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi
+      working-directory: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -48,8 +48,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi
-          file: src/Services/Insightify.FinancialDataApi/Insightify.FinancialDataApi/Dockerfile
+          context: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi
+          file: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Dockerfile
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/insightify.financialDataApi
+          tags: ${{secrets.DOCKER_USERNAME}}/Insighify.financialDataApi
 
