--- a/.github/workflows/financial-data.yml
+++ b/.github/workflows/financial-data.yml
@@ -51,5 +51,5 @@ jobs:
           context: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi
           file: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Dockerfile
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/Insighify.financialDataApi
+          tags: ${{secrets.DOCKER_USERNAME}}/insighify.financialdata
 
