--- a/.github/workflows/posts.yml
+++ b/.github/workflows/posts.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Dokerize Insightify.FinancialDataAPI
+name: Dokerize Insightify.Posts
 
 on:
   push:
