--- a/.github/workflows/financial-data-bgt.yml
+++ b/.github/workflows/financial-data-bgt.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Dockerize Insightify.FinancialDataAPI
+name: Dockerize Insightify.FinancialDataBackgroundTasks
 
 on:
   push:
@@ -23,18 +23,18 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj
+      run: dotnet restore src/Services/Insighify.FinancialDataApi/Insightify.FinancialBackgroundTasks/Insightify.FinancialBackgroundTasks.csproj
     - name: Build
-      run: dotnet build src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj --no-restore
+      run: dotnet build src/Services/Insighify.FinancialDataApi/Insightify.FinancialBackgroundTasks/Insightify.FinancialBackgroundTasks.csproj --no-restore
     - name: Test
-      run: dotnet test src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Insighify.FinancialDataApi.csproj --no-build --verbosity normal
+      run: dotnet test src/Services/Insighify.FinancialDataApi/Insightify.FinancialBackgroundTasks/Insightify.FinancialBackgroundTasks.csproj --no-build --verbosity normal
       
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     env:
-      working-directory: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi
+      working-directory: src/Services/Insighify.FinancialDataApi/Insightify.FinancialBackgroundTasks
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -49,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: src/Services/Insighify.FinancialDataApi/
-          file: src/Services/Insighify.FinancialDataApi/Insighify.FinancialDataApi/Dockerfile
+          file: src/Services/Insighify.FinancialDataApi/Insightify.FinancialBackgroundTasks/Dockerfile
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/insightify.financialdata
+          tags: ${{secrets.DOCKER_USERNAME}}/insightify.financialdatabgt
 
