--- a/.github/workflows/financial-data.yml
+++ b/.github/workflows/financial-data.yml
@@ -6,6 +6,8 @@ name: Dockerize Insightify.FinancialDataAPI
 on:
   push:
     branches: [ "develop" ]
+    paths: 
+      - 'src/Services/Insighify.FinancialDataApi/**'
   pull_request:
     branches: [ "develop" ]
     paths: 
