--- a/.github/workflows/news-bgt.yml
+++ b/.github/workflows/news-bgt.yml
@@ -1,17 +1,17 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Dockerize Insightify.BackgroundTasks
+name: Dockerize Insightify.NewsBackgroundTasks
 
 on:
   push:
     branches: [ "develop" ]
     paths: 
-      - 'src/Services/Insightify.NewsAPI/News.BackgroundTasks/**'
+      - 'src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/**'
   pull_request:
     branches: [ "develop" ]
     paths: 
-      - 'src/Services/Insightify.NewsAPI/News.BackgroundTasks/**'
+      - 'src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/**'
 
 jobs:
   build:
@@ -25,18 +25,18 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore src/Services/Insightify.NewsAPI/Insightify.BackgroundTasks/Insightify.BackgroundTasks.csproj
+      run: dotnet restore src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Insightify.NewsBackgroundTasks.csproj
     - name: Build
-      run: dotnet build src/Services/Insightify.NewsAPI/Insightify.BackgroundTasks/Insightify.BackgroundTasks.csproj --no-restore
+      run: dotnet build src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Insightify.NewsBackgroundTasks.csproj --no-restore
     - name: Test
-      run: dotnet test src/Services/Insightify.NewsAPI/Insightify.BackgroundTasks/Insightify.BackgroundTasks.csproj --no-build --verbosity normal
+      run: dotnet test src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Insightify.NewsBackgroundTasks.csproj --no-build --verbosity normal
       
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: build
     env:
-      working-directory: src/Services/Insightify.NewsAPI/Insightify.BackgroundTasks
+      working-directory: src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: src/Services/Insightify.NewsAPI
-          file: src/Services/Insightify.NewsAPI/Insightify.BackgroundTasks/Dockerfile
+          file: src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Dockerfile
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/insightify.bgt
 
