tags and dates in get all posts and tags in create post in gateway

--- a/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/appsettings.json
+++ b/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/appsettings.json
@@ -23,6 +23,7 @@
   "ServiceEndpoints": {
     "News": "http://localhost:5035",
     "Posts": "http://localhost:5036",
-    "FinancialData": "http://localhost:5037"
+    "FinancialData": "http://localhost:5037",
+    "Account": "http://localhost:5001"
   }
 }
