--- a/src/Services/Insightify.Posts/Insightify.Posts.Infrastructure/Insightify.Posts.Infrastructure.csproj
+++ b/src/Services/Insightify.Posts/Insightify.Posts.Infrastructure/Insightify.Posts.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
 
